# onlineknnrs

./: .gitignore  Cargo.toml  Code-of-Conduct.md  Makefile  README.md  build.sh
.cargo/: config
.github/workflows/: rust.yml
hnsw_rs/: CMakeLists.txt  Cargo.toml  build.rs
hnsw_rs/benches/: bench.rs
hnsw_rs/data/: input-ids-15k.csv
hnsw_rs/includes/: hnswalg.h  hnswindex.h
hnsw_rs/src/: embedding_computer.rs  error.rs  hnswindex.rs  knn_tf.rs  knncountry.rs  knnindex.rs  knnservice.rs  lib.rs  loader.rs  native.rs
hnsw_rs/src_cpp/: hnswindex.h  knn_api.cpp  knn_api.h
knn_py/: Cargo.toml
knn_py/src/: lib.rs
knn_python/: Cargo.toml  README.md  download_and_install_tf.sh  pyproject.toml  requirements-dev.txt  setup.py
knn_python/examples/: basic.py
knn_python/knn_py/: __init__.py
knn_python/src/: lib.rs
knn_rs/: Cargo.toml  build.rs
knn_rs/benches/: bench.rs
knn_rs/includes/: hnswlib.h  knn_api.h
knn_rs/proto/: config.proto
knn_rs/src/: embedding_computer.rs  knn_tf.rs  knncountry.rs  knnindex.rs  knnservice.rs  lib.rs  loader.rs  productindex.rs  wrappedindex.rs
knn_rs/src_cpp/: knn_api.cpp
proto/: knn.proto
service/: Cargo.toml  build.rs
service/config/: default.toml
service/proto/: health_check.proto  knn.proto
service/src/: health_check.rs  knn.rs  knn_controller.rs  metric_observer.rs  server.rs  settings.rs
