[package]
name = "hnsw_rs"
version = "0.1.0"
authors = ["Charles Roussel <c.roussel@criteo.com>"]
edition = "2018"
build = "build.rs"

[lib]
bench = false

[dependencies]
libc= "0.2"
ndarray  = "0.13"
failure = "0.1"
parquet = "0.16"
log = "0.4"

[build-dependencies]
cc = "1.0"
bindgen = "0.53"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false