[package]
name = "knn_py"
version = "0.1.0"
authors = ["Charles Roussel <c.roussel@criteo.com>"]
edition = "2018"

[lib]
name = "knn_py"
crate-type = ["cdylib"]

[dependencies]
hnsw_rs = {path = "../hnsw_rs"}
env_logger = "0.7"

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]