[package]
name = "knn_py"
version = "0.1.0"
authors = ["Charles Roussel <c.roussel@criteo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Darktrop/onlineknnrs"
homepage = "https://github.com/Darktrop/onlineknnrs"
readme = "README.md"
keywords = ["knn", "hnsw", "python"]

[package.metadata.maturin]
classifier = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

[lib]
name = "knn_py"
crate-type = ["rlib", "cdylib"]

[dependencies]
hnsw_rs = {path = "../hnsw_rs"}
env_logger = "0.7"
shellexpand = "2.0"

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]