[package]
name = "knn_python"
version = "0.1.0"
authors = ["Charles Roussel <c.roussel@criteo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Darktrop/onlineknnrs"
homepage = "https://github.com/Darktrop/onlineknnrs"
readme = "README.md"
keywords = ["knn", "hnsw", "python"]

[lib]
name = "knn_py"
crate-type = ["rlib", "cdylib"]

[dependencies]
tensorflow-sys = "0.17.0"
hnsw_rs = {path = "../hnsw_rs"}
env_logger = "0.7"
shellexpand = "2.0"

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]