[package]
name = "knn_rs"
version = "0.1.0"
authors = ["Charles Roussel <c.roussel@criteo.com>"]
edition = "2018"
build = "build.rs"

[lib]
bench = false

[dependencies]
libc= "0.2"
ndarray  = "0.15"
log = "0.4"
tempdir = "0.3"
prost = "0.12"
bytes = "1.5"
tensorflow = "0.21"
parquet = "50.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
faiss = { git = 'https://github.com/chroussel/faiss-rs.git' }
faiss-sys = { git = 'https://github.com/chroussel/faiss-rs.git' }
byteorder = "1.5.0"
parking_lot = "0.12.1"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
