[package]
name = "service"
version = "0.1.0"
authors = ["Charles Roussel <c.roussel@criteo.com>"]
edition = "2018"
build = "build.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Darktrop/onlineknnrs"
homepage = "https://github.com/Darktrop/onlineknnrs"
readme = "README.md"
keywords = ["knn", "hnsw", "grpc", "tonic"]

[[bin]]
name = "onlineknn-server"
path = "src/server.rs"
bench = false

[dependencies]
knn_rs = { path = "../knn_rs"}
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.35", features = ["full"] }
log = "0.4"
env_logger = "0.11"
failure = "0.1"
clap = "4.4"
dipstick = "0.7"
hdrhistogram = "6.0"
config = "0.10"
serde_derive = "1.0"
serde = "1.0"
metrics-runtime = "0.13"
metrics-core = "0.5"
clokwerk = "0.3"
shellexpand = "2.0"

[build-dependencies]
tonic-build = "0.1.0"
