[package]
name = "service"
version = "0.2.0"
authors = ["Charles Roussel <c.roussel@criteo.com>"]
edition = "2021"
build = "build.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Darktrop/onlineknnrs"
homepage = "https://github.com/Darktrop/onlineknnrs"
readme = "README.md"
keywords = ["knn", "hnsw", "grpc", "tonic"]

[[bin]]
name = "onlineknn-server"
path = "src/server.rs"
bench = false

[dependencies]
knn_rs = { path = "../knn_rs"}
tonic = "0.10"
tonic-health = "0.10"
prost = "0.12"
tokio = { version = "1.35", features = ["full"] }
env_logger = "0.11"
anyhow = "1"
clap = {version= "4.4", features =["derive"]}
config = "0.13"
serde_derive = "1.0"
serde = "1.0"
metrics = "0.22"
shellexpand = "3.1"
tracing = "0"
tracing-subscriber = {version="0.3", features=["env-filter"]}
metrics-exporter-prometheus = "0.13"

[build-dependencies]
tonic-build = "0.10"
